Convert project to use Panama (FFM) instead of JNI